src/snapshots/dnstracer__args__tests__args_source_v6.snap
---
source: src/args.rs
expression: args
---
Args {
    domain: "example.com",
    no_positive_cache: false,
    negative_cache: false,
    no_edns0: false,
    overview: false,
    query_type: A,
    retries: 3,
    server: "a.root-servers.net",
    timeout: 5s,
    source_address: Some(
        2001:db8::1,
    ),
    ipv6: false,
    ipv4: false,
    tcp: false,
}
