src/snapshots/dnstracer__args__tests__not_valid_source_v4_plus_ipv6_flag.snap
---
source: src/args.rs
expression: validated
---
Cannot use IPv6 only queries with an ipv4 source address (1.1.1.1), at src/args.rs:129:21
